# EMGAuth

./: README.md  pyproject.toml
base_experiment_lightgbm/: base_test.py  evaluation.py
base_experiment_randomforest/: base_test.py
base_experiment_randomforest/experiment_tools/: __init__.py
base_experiment_svm/: base_test.py  evaluation.py
base_experiment_svm/experiment_tools/: dataset_splitter.py
base_experiment_triplet/: base_test.py
base_experiment_triplet/experiment_tools/: __init__.py  augumentation.py  dataset_splitter.py  embedder.py  verificator.py
constract-dataset/: main.py  params.yaml
constract-dataset/tools/: __init__.py  detecte_waves.py  filter_waves.py  util.py
leadked_test_lightbgm/: leaked_test.py
leadked_test_lightbgm/experiment_tools/: my_features.py
leadked_test_randomforest/: leaked_test.py
leadked_test_randomforest/experiment_tools/: __init__.py  dataset_splitter.py  feature_extractor.py
leadked_test_svm/: leaked_test.py
normal_test_lightbgm/: normal_test.py
normal_test_lightbgm/experiment_tools/: __init__.py
normal_test_randomforest/: normal_test.py
normal_test_randomforest/experiment_tools/: calc_scores.py
normal_test_svm/: evaluation.py  normal_test.py
normal_test_svm/experiment_tools/: augumentation.py  dataset_splitter.py
paper_figure/: gesture_evaluation.py  preprocess.py  roc_each_model.py
paper_figure/tools/: __init__.py  calc_scores.py  detecte_waves.py  filter_waves.py
